--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fishEye",
+	"name": "06fisheye",
 	"version": "1.0.0",
 	"description": "FishEye is a platform for photography creators",
 	"main": "fishEye.js",
